test/fail/3/Sum.java
public class Sum {

  public int main(int a, int b) {
    return a - b;
  }

}
